@@ -106,7 +106,7 @@
         <vault.password>admin</vault.password>
 
         <slf4j.version>1.7.6</slf4j.version>
-        <jacoco.version>0.8.3</jacoco.version>
+        <jacoco.version>0.8.7</jacoco.version>
         <graphql.client.version>1.7.6</graphql.client.version>
         <magento.graphql.version>9.0.0-magento242ee</magento.graphql.version>
 
@@ -747,6 +747,26 @@
                     </snapshots>
                 </pluginRepository>
             </pluginRepositories>
+        </profile>
+
+        <profile>
+            <id>java-9-and-newer</id>
+            <activation>
+                <jdk>[9,)</jdk>
+            </activation>
+            <build>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-surefire-plugin</artifactId>
+                            <configuration>
+                                <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
+            </build>
         </profile>
 
         <profile>
